force-app/main/default/objects/Journey_Execution__c/Journey_Execution__c.object-meta.xml
<CustomObject>
    <description>Master record for each CRM journey execution run</description>
    <label>Journey Execution</label>
    <nameField>
        <displayFormat>EXEC-{0000}</displayFormat>
        <label>Execution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journey Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>