force-app/main/default/objects/Journey_Execution__c/fields/Business_Journey_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_Journey_ID__c</fullName>
    <description>External Business Journey ID from the Journey Builder application</description>
    <externalId>true</externalId>
    <label>Business Journey ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>