force-app/main/default/objects/Journey_Execution__c/fields/Data_Mode__c.field-meta.xml
<CustomField>
    <fullName>Data_Mode__c</fullName>
    <description>Incremental processes only new data; Full Re-run reprocesses entire dataset</description>
    <label>Data Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Incremental</fullName><default>true</default><label>Incremental</label></value>
            <value><fullName>Full Re-run</fullName><default>false</default><label>Full Re-run</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>