force-app/main/default/objects/Journey_Execution__c/fields/Execution_Type__c.field-meta.xml
<CustomField>
    <fullName>Execution_Type__c</fullName>
    <description>One-Time for batch uploads, Recurring for ongoing syncs</description>
    <label>Execution Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>One-Time</fullName><default>false</default><label>One-Time</label></value>
            <value><fullName>Recurring</fullName><default>true</default><label>Recurring</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>