force-app/main/default/objects/Journey_Execution__c/fields/Ingestion_Method__c.field-meta.xml
<CustomField>
    <fullName>Ingestion_Method__c</fullName>
    <description>Real-time for event-based triggers; Batch for bulk transfers</description>
    <label>Ingestion Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Real-time</fullName><default>false</default><label>Real-time</label></value>
            <value><fullName>Batch</fullName><default>true</default><label>Batch</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>