force-app/main/default/objects/Journey_Execution__c/fields/Processed_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Processed_Contacts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Processed Contacts</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>