force-app/main/default/objects/Journey_Execution__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current execution status</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Scheduled</fullName><default>true</default><label>Scheduled</label></value>
            <value><fullName>Running</fullName><default>false</default><label>Running</label></value>
            <value><fullName>Paused</fullName><default>false</default><label>Paused</label></value>
            <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>