force-app/main/default/objects/Journey_Execution__c/fields/Throttle_Percent__c.field-meta.xml
<CustomField>
    <fullName>Throttle_Percent__c</fullName>
    <defaultValue>75</defaultValue>
    <description>Execution speed as percentage of maximum capacity</description>
    <label>Throttle Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>